# YSLog

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ysLog.cpp  ysLog.hpp
test/: CMakeLists.txt  main.cpp
